--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>Priyanka</h1>
-					<p>A fun little speck floating in the galaxy <a href="http://html5up.net">HTML5 UP</a></p>
+					<p>A crazy little speck floating in the galaxy</p>
 				</header>
 				<div class="container">
 					<ul class="actions">
@@ -47,7 +47,7 @@
 						<header class="major">
 							<h2>Who I am</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>An Applications Engineer for Oracle Cloud Commerce in Hyderabad. <br> Have a fetish for stories. In constant pursuit of becoming an excellent one myself.<br> Believes kind is greater than intelligent. </p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -61,19 +61,19 @@
 						<header class="major">
 							<h2>Stuff I do</h2>
 						</header>
-						<p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
+						<p>Passionate about books and music. Believe movies are one of mankind's finest inventions. Like theatre better though.</p>
 						<ul class="icons-grid">
 							<li>
-								<span class="icon major fa-camera-retro"></span>
-								<h3>Magna Etiam</h3>
+								<span class="icon major fa-music"></span>
+								<h3>Sing n Play</h3>
 							</li>
 							<li>
 								<span class="icon major fa-pencil"></span>
-								<h3>Lorem Ipsum</h3>
+								<h3>Write</h3>
 							</li>
 							<li>
 								<span class="icon major fa-code"></span>
-								<h3>Nulla Tempus</h3>
+								<h3>Code</h3>
 							</li>
 							<li>
 								<span class="icon major fa-coffee"></span>
@@ -93,7 +93,7 @@
 						<header class="major">
 							<h2>One more thing</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>I love a good cup of tea. Would love to share one if you have a good story to tell.</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
@@ -450,7 +450,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; priyanka</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
 					</ul>
 				</footer>
 			</section>
