Changes to index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Priyanka</h1>
+					<h1 style="margin-top: -220px">Priyanka</h1>
 					<p>A crazy little speck floating in the galaxy</p>
 				</header>
 				<div class="container">
@@ -47,7 +47,7 @@
 						<header class="major">
 							<h2>Who I am</h2>
 						</header>
-						<p>An Applications Engineer for Oracle Cloud Commerce in Hyderabad. <br> Have a fetish for stories. In constant pursuit of becoming an excellent one myself.<br> Believes kind is greater than intelligent. </p>
+						<p>A Software Devleoper based in Hyderabad <br> Have a fetish for stories.<br>Knows kind to be greater than intelligent. </p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -61,23 +61,23 @@
 						<header class="major">
 							<h2>Stuff I do</h2>
 						</header>
-						<p>Passionate about books and music. Believe movies are one of mankind's finest inventions. Like theatre better though.</p>
+						<p>Passionate about books, music and theatre. Believe movies are one of mankind's finest inventions.</p>
 						<ul class="icons-grid">
-							<li>
-								<span class="icon major fa-music"></span>
-								<h3>Sing n Play</h3>
+							 <li>
+								<a href="https://www.youtube.com/channel/UCCEb87sZLbzqYxcGLwcDHjg" target="_blank" class="icon major fa-music"></a>
+								<h3>Sing</h3>
 							</li>
 							<li>
-								<span class="icon major fa-pencil"></span>
+								<a href="https://wordpress.com/view/priyanka23ag.wordpress.com" target="_blank" class="icon major fa-pencil"></a>
 								<h3>Write</h3>
 							</li>
 							<li>
-								<span class="icon major fa-code"></span>
-								<h3>Code</h3>
+								<a href="https://www.goodreads.com/user/show/39158133-priyanka-agrawal" target="_blank" class="icon major fa-book"></a>
+								<h3>Read</h3>
 							</li>
 							<li>
-								<span class="icon major fa-coffee"></span>
-								<h3>Sed Feugiat</h3>
+								<a href="https://www.linkedin.com/in/priyanka-agrawal-2b3bb9101/" target="_blank" class="icon major fa-code"></a>
+								<h3>Code</h3>
 							</li>
 						</ul>
 					</div>
@@ -93,7 +93,8 @@
 						<header class="major">
 							<h2>One more thing</h2>
 						</header>
-						<p>I love a good cup of tea. Would love to share one if you have a good story to tell.</p>
+						<span class="icon major fa-coffee"></span>
+						<p>I am up for a hot, steaming cup of tea anytime if you have a good story to share.</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
@@ -443,14 +444,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
+						<li><a href="https://www.facebook.com/priyanka.agrawal.902819" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/pr1yanka23" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<!-- 	<li><a href="#" class="icon alt fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+						<li><a href="mailto: priyanka23ag@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; priyanka</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; pr1yanka</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
 					</ul>
 				</footer>
 			</section>
