Fixed CSS issues

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<header class="major">
 							<h2>Who I am</h2>
 						</header>
-						<p>A Software Devleoper based in Hyderabad <br> Have a fetish for stories.<br>Knows kind to be greater than intelligent. </p>
+						<p>A Software Developer based in Hyderabad. <br> Have a fetish for stories.<br> Passionate about books, music and theatre. Believes movies are one of mankind's finest inventions.<br>Knows kind to be greater than intelligent. </p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -61,7 +61,7 @@
 						<header class="major">
 							<h2>Stuff I do</h2>
 						</header>
-						<p>Passionate about books, music and theatre. Believe movies are one of mankind's finest inventions.</p>
+						<!-- <p>Passionate about books, music and theatre. Believe movies are one of mankind's finest inventions.</p> -->
 						<ul class="icons-grid">
 							 <li>
 								<a href="https://www.youtube.com/channel/UCCEb87sZLbzqYxcGLwcDHjg" target="_blank" class="icon major fa-music"></a>
